[NTP Client] Put dismissing sections behind a flag

Dismissing status cards (and sections) now requires the
NTPSuggestionsSectionDismissal feature to be enabled.

Dismissing the Sign In promo is still possible.

BUG=657494

Review-Url: https://chromiumcodereview.appspot.com/2440673002
Cr-Commit-Position: refs/heads/master@{#426457}

Former-commit-id: bb75020ad83b3133a4e08cbec2b01f0dff44f378