components/ntp_snippets/features.cc
@@ -30,6 +30,9 @@ const base::Feature kPhysicalWebPageSuggestionsFeature{
 const base::Feature kContentSuggestionsFeature{
     "NTPSnippets", base::FEATURE_ENABLED_BY_DEFAULT};
 
+const base::Feature kSectionDismissalFeature{
+    "NTPSuggestionsSectionDismissal", base::FEATURE_DISABLED_BY_DEFAULT};
+
 const base::Feature kForeignSessionsSuggestionsFeature{
     "NTPForeignSessionsSuggestions", base::FEATURE_DISABLED_BY_DEFAULT};
 
